# termex-service

./: README.md  pyproject.toml  run.sh
api/: __init__.py  config.py  main.py  models.py
api/extractors/: __init__.py  mderank_client.py
aux/docsutf8/: doc_0.txt
aux/processed_aux/candidate_attn_paired/: doc_0_attn_paired.csv
aux/processed_aux/candidate_cross_attn_value/: doc_0_candidate_cross_attn_value.csv
aux/processed_aux/candidate_embedding/: doc_0_candidate_embedding.csv
aux/processed_aux/candidate_tokenizing/: doc_0_candidate_df.csv  doc_0_candidate_tokenized.csv
aux/processed_aux/df_dict/: aux_candidate_df.csv
aux/processed_aux/doc_word_embed_by_sen/doc_0/: doc_0_sen0_word_embedd.csv  doc_0_sen1_word_embedd.csv
aux/processed_aux/sentence_paired_text/: doc_0_orgbert_attn.json  doc_0_orgbert_attn.pkl  doc_0_sentence_paired.txt
aux/processed_aux/token_attn_paired/attn/: doc_0token_attn_paired.csv
output/top10/: doc_0.key
output/top15/: doc_0.key
output/top5/: doc_0.key
tests/: test_api.py
