[project]
name = "termex-api"
version = "1.0.0"
description = "API REST para extracción de términos"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
attentionrank = [
    "-e git+https://github.com/proyectoTeresIA/attentionrank.git#egg=attentionrank",
]
mderank = [
    "-e git+https://github.com/proyectoTeresIA/mderank.git#egg=mderank",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
